# bgp-card-recognize

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  DOCUMENT.md  README.md
docs/: card_recognize.js  card_recognize.wasm  cards.json  characters.json  fetch.py  hashes.json  index.html
include/: encode.h  find_cards.h  hash.h
src/: encode.cpp  find_cards.cpp  hash.cpp  main.cpp
